# GLSLCompiler

./: CMakeLists.txt  GLSLCompiler.h  README.md  conanfile.txt  example_include_paths.cpp  main.cpp  quick_start.cpp
data/: compile.sh  computeShader.comp  fragmentShader.frag  fragmentShader.spv  fragmentShaderInclude.frag  fragmentShaderInclude.spv  vertexShader.spv  vertexShader.vert
data/include/: getcolor.glsl
test/: CMakeLists.txt  unit-test.cpp
test/test/: CMakeLists.txt  unit-test.cpp
